--- a/IsaProject/IsaProject.csproj
+++ b/IsaProject/IsaProject.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="SendGrid.CSharp.HTTP.Client" Version="3.4.10" />
     <PackageReference Include="Swashbuckle" Version="5.6.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.IO.FileSystem.AccessControl" Version="5.0.0" />
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.7.1" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="4.7.0" />
   </ItemGroup>
